--- a/job/templates/job/reset_password.html
+++ b/job/templates/job/reset_password.html
@@ -22,7 +22,52 @@
   <link href="{% static 'job/css/icheck/flat/green.css' %}" rel="stylesheet">
 
   <script src="{% static 'job/js/jquery.min.js' %}"></script>
+  <style type="text/css">
+    body {
+      background-image:linear-gradient(#6891a2, #0c6121);
+      background-repeat: no-repeat;
+      height: 100%;
+      background-color: #0c6121;
+    }
+    .card-container.card {
+      max-width: 450px;
+      padding: 30px;
+    }
 
+    .card {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: 350px;
+      background-color: #fff;
+      padding: 20px 25px 30px;
+      -moz-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    }
+
+    a:hover {
+      text-decoration: none;
+      color: inherit !important;
+    }
+
+    .form-control {
+      display: block;
+      border: none;
+      border-radius: 0 !important;
+      padding: 0;
+      background-color: transparent;
+      box-shadow: none;
+      border-bottom: 1px solid #757575;
+    }
+
+  </style>
   <!--[if lt IE 9]>
         <script src="../assets/js/ie8-responsive-file-warning.js"></script>
         <![endif]-->
@@ -34,38 +79,33 @@
         <![endif]-->
 
 </head>
+<body>
 
-<body style="background:#F7F7F7;">
-
-  <div class="">
-    <a class="hiddenanchor" id="toregister"></a>
-    <a class="hiddenanchor" id="tologin"></a>
-
-    <div id="wrapper">
-      <div class="animate form">
-        <section class="login_content">
-          <form method="post" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h1>Password Reset</h1>
-            <div>
-              <label>Please enter the new Password</label>
-            </div>
-
-            <div>
-              <input type="password" class="form-control" placeholder="Password" name="password" required="" />
-            </div>
-            <div>
-              <input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password" required="" />
-            </div>
-            <div>
-              <button type="submit" class="btn btn-default submit">Submit</button>
-            </div>
-          </form>
-          <!-- form -->
-        </section>
-        <!-- content -->
+  <div class="container">
+    <div class="card card-container">
+      <h3 style="text-align:center;">Password Reset</h3>
+      {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+              <li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+      {% endif %}
+      <form method="post" action="" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+          <input type="password" class="form-control" name="password" placeholder="New Password" required>
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+      </form>
+      <div style="text-align:center; margin-top:30px;">
+        <h3><i class="fa fa-paw"></i> TRABAZO </h3>
+        <p>©2017 All Rights Reserved. TRABAZO! Privacy and Terms</p>
       </div>
-    </div>
+   </div>
   </div>
 
 </body>
