--- a/job/static/job/css/custom.css
+++ b/job/static/job/css/custom.css
@@ -1,3 +1,44 @@
+/* overlay start */
+body{
+    width: 100%;
+    height: 100%;
+}
+.spinner{
+    width: 80px;
+    height: 80px;
+    border: 2px solid #f3f3f3;
+    border-top:3px solid #f25a41;
+    border-radius: 100%;
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0;
+    margin: auto;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+    }to{
+        transform: rotate(360deg);
+    }
+}
+
+#overlay {
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.8);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999999999;
+}
+/* overlay ends */
+
+
+
 /* single customer starts */
  .card {
     margin-top: 20px;
@@ -104,7 +145,7 @@ html, body {
   background-color: #21242B !important;
 }
 #menu_toggle:hover{
-  color:#DB2821;
+  color:#37775D;
 }
 .input-sm {
   width:150px !important;
@@ -277,7 +318,7 @@ body.nav-md .container.body .right_col {
 .nav_title {
   width: 230px;
   float: left;
-  background: #DB2821;
+  background: #37775D;
   border-radius: 0;
   height: 57px;
 }
@@ -530,7 +571,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   margin-bottom: 10px;
 }
 a {
-  color: #fff;
+  color: #0e0e0e;
   text-decoration: none;
 }
 a, a:visited, a:focus, a:active, :visited, :focus, :active, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
@@ -1461,6 +1502,7 @@ ul.msg_list li a .message {
   position: absolute;
   background: #fff;
   margin-top: 0;
+  margin-left: -380%;
   border: 1px solid #D9DEE4;
   -webkit-box-shadow: none;
 }
@@ -5366,6 +5408,21 @@ body {
   white-space: nowrap;
 }
 @media (max-width: 400px) {
+
+  .card-container.card {
+    max-width: 300px !important;
+    padding: 22px !important;
+  }
+
+  .dropdown-menu::after {
+    right: 33%;
+  }
+
+  .signupcard {
+    height: 666px !important;
+    margin: 15px auto !important;
+  }
+
   .input-sm {
     width: 120px !important;
   }
