--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -1,21 +1,16 @@
 {% if request.session.logs %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Home Appliaance</title>
-
+  <title>Trabazo</title>
   {% load static %}
   <!-- Bootstrap core CSS -->
-
   <link href="{% static 'job/css/bootstrap.min.css' %}" rel="stylesheet">
-
   <link href="{% static 'job/fonts/css/font-awesome.min.css' %}" rel="stylesheet">
   <link href="{% static 'job/css/animate.min.css' %}" rel="stylesheet">
 
@@ -25,7 +20,6 @@
   <link href="{% static 'job/css/floatexamples.css' %}" rel="stylesheet" type="text/css" />
 
   <script type="text/javascript" src="{% static 'job/js/jquery.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'job/js/nprogress.js' %}"></script>
   <script type="text/javascript" src="{% static 'job/js/date.js' %}"></script>
   <!--[if lt IE 9]>
         <script src="../assets/js/ie8-responsive-file-warning.js"></script>
@@ -36,10 +30,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-
 </head>
-
-
 <body class="nav-md">
   <div class="container body">
     <div class="main_container">
@@ -105,7 +96,7 @@
         <div class="nav_menu">
           <nav class="" role="navigation">
             <div class="nav toggle">
-              <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+              <a id="menu_toggle" style="color:#fff;"><i class="fa fa-bars"></i></a>
             </div>
             <ul class="nav navbar-nav navbar-right" style="float: right;">
               <li class="">
@@ -133,40 +124,40 @@
                     {% if 'Admin' in request.session.dash %}
                     <a href="{% url 'job:admin_read' notify.id %}">
                       <span class="image">
-                                       <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
-                                    </span>
+                        <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
+                      </span>
                       <span>
-                                        <span></span>
+                        <span></span>
                       </span>
                       <span class="message">
-                                        {{notify.service_request}}
-                                    </span>
+                        {{notify.service_request}}
+                      </span>
                     </a>
                     {% endif %}
                     {% if 'Customer' in request.session.dash %}
                     <a href="{% url 'job:customer_read' notify.id %}">
                       <span class="image">
-                                       <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
-                                    </span>
+                        <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
+                      </span>
                       <span>
-                                        <span></span>
+                        <span></span>
                       </span>
                       <span class="message">
-                                        {{notify.job_description}}
-                                    </span>
+                        {{notify.job_description}}
+                      </span>
                     </a>
                     {% endif %}
                     {% if 'Worker' in request.session.dash %}
                     <a href="{% url 'job:worker_read' notify.id %}" style="display: inline-block; vertical-align: top;">
                       <span class="image">
-                                       <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
-                                    </span>
+                        <img src="{{ notify.customer_id.profile_pic.url }}" style="width:25px;height:25px"/>
+                      </span>
                       <span>
-                                        <span></span>
+                        <span></span>
                       </span>
                       <span class="message">
-                                        <h6 style="margin: 0; padding: 0; line-height:25px">You just got a job</h6>
-                                    </span>
+                        <h6 style="margin: 0; padding: 0; line-height:25px">You just got a job</h6>
+                      </span>
                     </a>
                     {% endif %}
                   </li>
@@ -194,29 +185,15 @@
       {% endblock %}
       </div>
       <!-- /page content -->
-
     </div>
   </div>
 
-  <div id="custom_notifications" class="custom-notifications dsp_none">
-    <ul class="list-unstyled notifications clearfix" data-tabbed_notifications="notif-group">
-    </ul>
-    <div class="clearfix"></div>
-    <div id="notif-group" class="tabbed_notifications"></div>
-  </div>
-
   <script src="{% static 'job/js/bootstrap.min.js' %}"></script>
-
   <!-- bootstrap progress js -->
+  <script src="{% static 'job/js/custom.js' %}"></script>
   <script src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
   <script src="{% static 'job/js/nicescroll/jquery.nicescroll.min.js' %}"></script>
-  <!-- icheck -->
-  <script src="{% static 'job/js/icheck/icheck.min.js' %}"></script>
-  <script src="{% static 'job/js/custom.js' %}"></script>
 
-  <!-- daterangepicker -->
-  <script type="text/javascript" src="{% static 'job/js/moment/moment.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'job/js/datepicker/daterangepicker.js' %}"></script>
 
   <!-- Datetime picker javascript starts -->
   <script type="text/javascript" src="{% static 'job/js/bootstrap-datetimepicker.js' %}" charset="UTF-8"></script>
@@ -255,190 +232,20 @@
   </script>
   <!-- Datetime picker javascript ends -->
 
-  <script type="text/javascript">
-    $(document).ready(function() {
-      // [17, 74, 6, 39, 20, 85, 7]
-      //[82, 23, 66, 9, 99, 6, 2]
-      var data1 = [
-        [gd(2012, 1, 1), 17],
-        [gd(2012, 1, 2), 74],
-        [gd(2012, 1, 3), 6],
-        [gd(2012, 1, 4), 39],
-        [gd(2012, 1, 5), 20],
-        [gd(2012, 1, 6), 85],
-        [gd(2012, 1, 7), 7]
-      ];
-
-      var data2 = [
-        [gd(2012, 1, 1), 82],
-        [gd(2012, 1, 2), 23],
-        [gd(2012, 1, 3), 66],
-        [gd(2012, 1, 4), 9],
-        [gd(2012, 1, 5), 119],
-        [gd(2012, 1, 6), 6],
-        [gd(2012, 1, 7), 9]
-      ];
-      $("#canvas_dahs").length && $.plot($("#canvas_dahs"), [
-        data1, data2
-      ], {
-        series: {
-          lines: {
-            show: false,
-            fill: true
-          },
-          splines: {
-            show: true,
-            tension: 0.4,
-            lineWidth: 1,
-            fill: 0.4
-          },
-          points: {
-            radius: 0,
-            show: true
-          },
-          shadowSize: 2
-        },
-        grid: {
-          verticalLines: true,
-          hoverable: true,
-          clickable: true,
-          tickColor: "#d5d5d5",
-          borderWidth: 1,
-          color: '#fff'
-        },
-        colors: ["rgba(38, 185, 154, 0.38)", "rgba(3, 88, 106, 0.38)"],
-        xaxis: {
-          tickColor: "rgba(51, 51, 51, 0.06)",
-          mode: "time",
-          tickSize: [1, "day"],
-          //tickLength: 10,
-          axisLabel: "Date",
-          axisLabelUseCanvas: true,
-          axisLabelFontSizePixels: 12,
-          axisLabelFontFamily: 'Verdana, Arial',
-          axisLabelPadding: 10
-            //mode: "time", timeformat: "%m/%d/%y", minTickSize: [1, "day"]
-        },
-        yaxis: {
-          ticks: 8,
-          tickColor: "rgba(51, 51, 51, 0.06)",
-        },
-        tooltip: false
-      });
-
-      function gd(year, month, day) {
-        return new Date(year, month - 1, day).getTime();
-      }
-    });
+  <div id="overlay">
+    <div class="spinner"></div>
+  </div>
+  <script>
+    var over = document.getElementById("overlay");
+    window.onload=function(){
+      $( ".x_panel .row .col-sm-12" ).removeClass( "col-sm-12" ).addClass( "table-responsive" );
+      setTimeout( function(){
+        over.style.display = 'none';
+      }, 500 );
+    }
   </script>
-
-  <!-- pace -->
-  <script type="text/javascript" src="{% static 'job/js/pace/pace.min.js' %}"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('#myTable').DataTable();
-    });
-  </script>
-  <!-- skycons -->
-  <script type="text/javascript" src="{% static 'job/js/skycons/skycons.min.js' %}"></script>
-  <script type="text/javascript">
-    var icons = new Skycons({
-        "color": "#73879C"
-      }),
-      list = [
-        "clear-day", "clear-night", "partly-cloudy-day",
-        "partly-cloudy-night", "cloudy", "rain", "sleet", "snow", "wind",
-        "fog"
-      ],
-      i;
-
-    for (i = list.length; i--;)
-      icons.set(list[i], list[i]);
-
-    icons.play();
-  </script>
-
-  <!-- datepicker -->
-  <script type="text/javascript">
-    $(document).ready(function() {
-
-      var cb = function(start, end, label) {
-        console.log(start.toISOString(), end.toISOString(), label);
-        $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
-        //alert("Callback has fired: [" + start.format('MMMM D, YYYY') + " to " + end.format('MMMM D, YYYY') + ", label = " + label + "]");
-      }
-
-      var optionSet1 = {
-        startDate: moment().subtract(29, 'days'),
-        endDate: moment(),
-        minDate: '01/01/2012',
-        maxDate: '12/31/2015',
-        dateLimit: {
-          days: 60
-        },
-        showDropdowns: true,
-        showWeekNumbers: true,
-        timePicker: false,
-        timePickerIncrement: 1,
-        timePicker12Hour: true,
-        ranges: {
-          'Today': [moment(), moment()],
-          'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-          'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-          'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-          'This Month': [moment().startOf('month'), moment().endOf('month')],
-          'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
-        },
-        opens: 'left',
-        buttonClasses: ['btn btn-default'],
-        applyClass: 'btn-small btn-primary',
-        cancelClass: 'btn-small',
-        format: 'MM/DD/YYYY',
-        separator: ' to ',
-        locale: {
-          applyLabel: 'Submit',
-          cancelLabel: 'Clear',
-          fromLabel: 'From',
-          toLabel: 'To',
-          customRangeLabel: 'Custom',
-          daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'],
-          monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-          firstDay: 1
-        }
-      };
-      $('#reportrange span').html(moment().subtract(29, 'days').format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
-      $('#reportrange').daterangepicker(optionSet1, cb);
-      $('#reportrange').on('show.daterangepicker', function() {
-        console.log("show event fired");
-      });
-      $('#reportrange').on('hide.daterangepicker', function() {
-        console.log("hide event fired");
-      });
-      $('#reportrange').on('apply.daterangepicker', function(ev, picker) {
-        console.log("apply event fired, start/end dates are " + picker.startDate.format('MMMM D, YYYY') + " to " + picker.endDate.format('MMMM D, YYYY'));
-      });
-      $('#reportrange').on('cancel.daterangepicker', function(ev, picker) {
-        console.log("cancel event fired");
-      });
-      $('#options1').click(function() {
-        $('#reportrange').data('daterangepicker').setOptions(optionSet1, cb);
-      });
-      $('#options2').click(function() {
-        $('#reportrange').data('daterangepicker').setOptions(optionSet2, cb);
-      });
-      $('#destroy').click(function() {
-        $('#reportrange').data('daterangepicker').remove();
-      });
-    });
-  </script>
-  <script type="text/javascript">
-    NProgress.done();
-  </script>
-  <!-- /datepicker -->
-  <!-- /footer content -->
 </body>
-
 </html>
 {% else %}
-      <h2>You have no access to this page</h2>
-  {% endif %}
+  <h2>You have no access to this page</h2>
+{% endif %}
