--- a/job/templates/job/customer_invoice.html
+++ b/job/templates/job/customer_invoice.html
@@ -66,12 +66,13 @@
   <div class="modal-dialog">
     <!-- Modal content-->
     <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Invoice</h4>
+      </div>
       <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
         <div class="x_panel">
           <div id="content_result">
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
