--- a/job/templates/job/customer_query.html
+++ b/job/templates/job/customer_query.html
@@ -59,12 +59,13 @@
 			<div class="modal-dialog">
 				<!-- Modal content-->
 				<div class="modal-content">
+					<div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal">&times;</button>
+		        <h4 class="modal-title">Make Query</h4>
+		      </div>
 					<div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
 						<div class="x_panel">
 							<div id="content_result">
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -111,38 +112,6 @@
 			})
 		});
 	});
-
-		var handleDataTableButtons = function() {
-				"use strict";
-				0 !== $("#datatable-buttons").length && $("#datatable-buttons").DataTable({
-					dom: "Bfrtip",
-					buttons: [{
-						extend: "copy",
-						className: "btn-sm"
-					}, {
-						extend: "csv",
-						className: "btn-sm"
-					}, {
-						extend: "excel",
-						className: "btn-sm"
-					}, {
-						extend: "pdf",
-						className: "btn-sm"
-					}, {
-						extend: "print",
-						className: "btn-sm"
-					}],
-					responsive: !0
-				})
-			},
-			TableManageButtons = function() {
-				"use strict";
-				return {
-					init: function() {
-						handleDataTableButtons()
-					}
-				}
-			}();
 	</script>
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -162,7 +131,6 @@
 				fixedHeader: true
 			});
 		});
-		TableManageButtons.init();
 	</script>
 
 
