--- a/job/templates/job/login.html
+++ b/job/templates/job/login.html
@@ -3,26 +3,68 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Gentallela Alela! | </title>
+  <title>Trabazo </title>
 
   <!-- Bootstrap core CSS -->
   {% load static %}
   <link href="{% static 'job/css/bootstrap.min.css' %}" rel="stylesheet">
-
   <link href="{% static 'job/fonts/css/font-awesome.min.css' %}" rel="stylesheet">
   <link href="{% static 'job/css/animate.min.css' %}" rel="stylesheet">
-
   <!-- Custom styling plus plugins -->
   <link href="{% static 'job/css/custom.css' %}" rel="stylesheet">
   <link href="{% static 'job/css/icheck/flat/green.css' %}" rel="stylesheet">
-
   <script src="{% static 'job/js/jquery.min.js' %}"></script>
 
+  <style type="text/css">
+    body {
+      background-image:linear-gradient(#6891a2, #0c6121);
+      background-repeat: no-repeat;
+      height: 100%;
+      background-color: #0c6121;
+    }
+    .card-container.card {
+      max-width: 450px;
+      padding: 30px;
+    }
+
+    .card {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: 375px;
+      background-color: #fff;
+      padding: 20px 25px 30px;
+      -moz-border-radius: 2px;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    }
+
+    a:hover {
+      text-decoration: none;
+      color: inherit !important;
+    }
+
+    .form-control {
+      display: block;
+      border: none;
+      border-radius: 0 !important;
+      padding: 0;
+      background-color: transparent;
+      box-shadow: none;
+      border-bottom: 1px solid #757575;
+    }
+
+  </style>
   <!--[if lt IE 9]>
         <script src="../assets/js/ie8-responsive-file-warning.js"></script>
         <![endif]-->
@@ -32,59 +74,36 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-
 </head>
-
-<body style="background:#F7F7F7;">
-
-  <div class="">
-    <a class="hiddenanchor" id="toregister"></a>
-    <a class="hiddenanchor" id="tologin"></a>
-
-    <div id="wrapper">
-      <div class="animate form">
-        <section class="login_content">
-          <h2>{{msg}}</h2>
-          {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                  <li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-          {% endif %}
-          <form method="post" action="">
-          {% csrf_token %}
-            <h1>Login Form</h1>
-            <div>
-              <input type="email" class="form-control" placeholder="Email Id" name="email" required="" />
-            </div>
-            <div>
-              <input type="password" class="form-control" placeholder="Password" name="password" required="" />
-            </div>
-            <div>
-                <button type="login">login</button>
-                <a class="reset_pass" style="color:#000;" href="/forget_password">Lost your password?</a>
-            </div>
-            <div class="clearfix"></div>
-            <div class="separator">
-              <p class="change_link">New to site?
-                <a href="/signup" style="color:#000;" class="to_register"> Create Account </a>
-              </p>
-              <div class="clearfix"></div>
-              <br />
-              <div>
-                <h1><i class="fa fa-paw" style="font-size: 26px;"></i> TRABAZO </h1>
-
-                <p>©2017 All Rights Reserved. TRABAZO! Privacy and Terms</p>
-              </div>
-            </div>
-          </form>
-          <!-- form -->
-        </section>
-        <!-- content -->
+<body>
+  <div class="container">
+    <div class="card card-container">
+      <h3 style="text-align:center;">Login Form</h3>
+      <hr class="colorgraph" />
+      {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+              <li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+      {% endif %}
+      <form method="post" action="">
+        {% csrf_token %}
+        <div class="form-group">
+          <input type="email" class="form-control" name="email" placeholder="Email address" required>
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" name="password" placeholder="Password" required>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+      <a href="/signup">Create Account </a>
+      <a href="/forget_password" class="pull-right">Forgot the password?</a><span class="clearfix"></span>
+      <div style="text-align:center; margin-top:30px;">
+        <h3><i class="fa fa-paw"></i> TRABAZO </h3>
+        <p>©2017 All Rights Reserved. TRABAZO! Privacy and Terms</p>
       </div>
-
-
+   </div>
+  </div>
 </body>
-
 </html>
