--- a/job/templates/job/query.html
+++ b/job/templates/job/query.html
@@ -1,6 +1,6 @@
 {% block content %}
 {% if 'Customer' in request.session.dash %}
-  <div class="container" id="query_form" style="margin-top:10px;">
+  <div class="container" id="query_form" style="margin-top:10px; background:#fff;">
     <div class="row">
       <div class="col-md-9 col-centered">
         <form method="post" enctype="multipart/form-data" action="">
