--- a/job/templates/job/service_all.html
+++ b/job/templates/job/service_all.html
@@ -69,12 +69,13 @@
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title"></h4>
+				</div>
         <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
           <div class="x_panel">
             <div id="content_result">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -137,7 +138,11 @@
 				})
 			});
 		});
-		
+
+		window.setInterval(function(){
+				$('.dataTables_empty').closest('tr').find('td').attr("colspan", "10");
+		}, 500);
+
 		$(document).ready(function() {
 			$('#datatable').dataTable();
 			$('#datatable-keytable').DataTable({
