--- a/job/templates/job/worker_all.html
+++ b/job/templates/job/worker_all.html
@@ -45,7 +45,7 @@
 									<td>{{ work.category_id }}</td>
 									<td>{{ work.status }}</td>
 							<td>
-								<a class="view_data" id="{{ worker.id }}" data-toggle="modal" data-target="#view_result_data">
+								<a class="view_data" id="{{ work.id }}" data-toggle="modal" data-target="#view_result_data">
 									<i class="fa fa-eye btn" style="font-size: 20px; color:#6BD152;" aria-hidden="true"></i>
 								</a>
 							</td>
@@ -61,12 +61,13 @@
 		<div class="modal-dialog">
 			<!-- Modal content-->
 			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Worker Details</h4>
+				</div>
 				<div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
 					<div class="x_panel">
 						<div id="content_result">
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 						</div>
 					</div>
 				</div>
@@ -126,6 +127,10 @@
 				fixedHeader: true
 			});
 		});
+
+		window.setInterval(function(){
+				$('.dataTables_empty').closest('tr').find('td').attr("colspan", "10");
+		}, 500);		
 	</script>
 
 
