--- a/job/templates/job/create_job.html
+++ b/job/templates/job/create_job.html
@@ -51,7 +51,6 @@
 			      	xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
 			    	}
 			  	});
-
 					$("#create_job").on("click", function(e) {
 						e.preventDefault();
 						$.ajax({
@@ -69,7 +68,8 @@
 							},
 							success: function(data) {
 								currServiceObject = $("#"+$("#service_id").val());
-								$("#create_job_form").replaceWith(data);
+								console.log('---->', data);
+								$("#content_result").replaceWith(data);
 								var a=$("#result").val();
 								if(a=="Data Stored Successfully.")
 								{
