--- a/job/templates/job/worker_approvel.html
+++ b/job/templates/job/worker_approvel.html
@@ -1,14 +1,14 @@
 {% extends 'job/base.html' %}
 {% block content %}
-{% if 'Customer' in request.session.dash %}
+	{% if 'Worker' in request.session.dash %}
 	{% load static %}
 	<!-- datatable -->
 	<link href="{% static 'job/js/datatables/jquery.dataTables.min.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'job/js/datatables/buttons.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'job/js/datatables/fixedHeader.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/responsive.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'job/js/datatables/scroller.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
 	<script src="{% static 'job/js/jquery.min.js' %}"></script>
-	<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
 
 	<div class="wrapper border-bottom white-bg page-heading">
 		<div class="col-xs-12">
@@ -20,7 +20,6 @@
 	</div>
 
 	<div class="col-md-12 col-sm-12 col-xs-12">
-		<button type="button" class="btn btn-primary pull-right make_services" data-toggle="modal" data-target="#view_result_data">Make Services</button>
 		<div class="x_panel">
 			{% if messages %}
 				<ul class="messages">
@@ -33,54 +32,40 @@
 				<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 					<thead>
 						<tr>
-								<th>Service Date</th>
-								<th>Description</th>
-                <th>Job Created</th>
+								<th>Start Date</th>
+								<th>Transportation</th>
+								<th>Visit Charge</th>
+								<th>Total Cost</th>
+								<th>Response</th>
 						</tr>
 					</thead>
 					<tbody>
-						{% for services in all_services %}
+						{% for new_job in all_jobs %}
 						<tr>
-							<td scope="row">{{ services.service_dateTime }}</td>
-              <td>{{ services.service_request }}</td>
-							{% if services.job_created is True %}
-								<td>Created</td>
-							{% else %}
-								<td>Pending</td>
-							{% endif %}
+							<td scope="row">{{ new_job.job_start_datetime }}</td>
+				      <td>{{ new_job.Estimate_id.trasportation_charge }}</td>
+							<td>{{ new_job.Estimate_id.visit_charge }}</td>
+							<td>{{ new_job.Estimate_id.total_cost }}</td>
+							<td>
+								<a class="accept" id="{{ new_job.id }}">
+									<i class="fa fa-check-circle" title="Accept" style="font-size:20px; color:green;cursor:pointer;" aria-hidden="true"></i>
+								</a>
+								<a class="reject" id="{{ new_job.id }}">
+									<i class="fa fa-eject" title="Reject" style="font-size:20px; color:red; margin-left:10px;cursor:pointer;" aria-hidden="true"></i>
+								</a>
+							</td>
 						</tr>
 						{% endfor %}
 					</tbody>
 				</table>
 			</div>
 		</div>
-
-		<div class="modal fade" id="view_result_data" role="dialog">
-			<div class="modal-dialog">
-				<!-- Modal content-->
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title">Create Service</h4>
-					</div>
-					<div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
-						<div class="x_panel">
-							<div id="content_result">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
 	</div>
 	<!-- bootstrap progress js -->
 	<script src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
 	<script src="{% static 'job/js/nicescroll/jquery.nicescroll.min.js' %}"></script>
 	<!-- icheck -->
 	<script src="{% static 'job/js/icheck/icheck.min.js' %}"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-
 
 	<!-- Datatables-->
   <script src="{% static 'job/js/datatables/jquery.dataTables.min.js' %}"></script>
@@ -95,25 +80,76 @@
   <script src="{% static 'job/js/datatables/dataTables.fixedHeader.min.js' %}"></script>
   <script src="{% static 'job/js/datatables/dataTables.keyTable.min.js' %}"></script>
   <script src="{% static 'job/js/datatables/dataTables.responsive.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/responsive.bootstrap.min.js' %}"></script>
   <script src="{% static 'job/js/datatables/dataTables.scroller.min.js' %}"></script>
   <script src="{% static 'job/js/pace/pace.min.js' %}"></script>
 
 	<script type="text/javascript">
 
-	$(document).ready(function(){
-		$(".make_services").on("click", function() {
+	$(document).ready(function() {
+		$(".accept").on("click", function() {
+			job_id = this.id;
 			$.ajax({
-				url: '/createservices/',
+				url: '/'+ job_id +'/accept/',
 				type:'GET',
-				data: '',
+				data: {
+					job_id
+				},
 				success: function(data) {
-					$("#content_result").html(data);
-					toastr.success("you can specify your suitable date and time with your problem", 'Success', {timeOut: 15000});
+					currJobObject = $('#'+job_id);
+					currJobObject.closest('tr').remove()
+				}
+			})
+		});
+
+		$(".reject").on("click", function() {
+			job_id = this.id;
+			$.ajax({
+				url: '/'+ job_id +'/reject/',
+				type:'GET',
+				data: {
+					job_id
+				},
+				success: function(data) {
+					currJobObject = $('#'+job_id);
+					currJobObject.closest('tr').remove()
 				}
 			})
 		});
 	});
-
+		var handleDataTableButtons = function() {
+				"use strict";
+				0 !== $("#datatable-buttons").length && $("#datatable-buttons").DataTable({
+					dom: "Bfrtip",
+					buttons: [{
+						extend: "copy",
+						className: "btn-sm"
+					}, {
+						extend: "csv",
+						className: "btn-sm"
+					}, {
+						extend: "excel",
+						className: "btn-sm"
+					}, {
+						extend: "pdf",
+						className: "btn-sm"
+					}, {
+						extend: "print",
+						className: "btn-sm"
+					}],
+					responsive: !0
+				})
+			},
+			TableManageButtons = function() {
+				"use strict";
+				return {
+					init: function() {
+						handleDataTableButtons()
+					}
+				}
+			}();
+	</script>
+	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#datatable').dataTable();
 			$('#datatable-keytable').DataTable({
@@ -131,11 +167,11 @@
 				fixedHeader: true
 			});
 		});
-
+		TableManageButtons.init();
 	</script>
 
-  {% else %}
-      <h2>You have no access to this page</h2>
-  {% endif %}
-<!-- </div> -->
+
+{% else %}
+			<h2>You have no access to this page</h2>
+	{% endif %}
 {% endblock %}
