create new job ajax

--- a/job/templates/job/invoice_all.html
+++ b/job/templates/job/invoice_all.html
@@ -13,7 +13,7 @@
 		<div class="col-xs-12">
 			<ol class="breadcrumb" style="padding:20px 15px;">
 				<li>Dashboard</li>
-				<li><strong>Job</strong></li>
+				<li><strong>Invoices</strong></li>
 			</ol>
 		</div>
 	</div>
