--- a/job/templates/job/admin_job_report.html
+++ b/job/templates/job/admin_job_report.html
@@ -13,7 +13,7 @@
 		<div class="col-xs-12">
 			<ol class="breadcrumb" style="padding:20px 15px;">
 				<li>Dashboard</li>
-				<li><strong>Services</strong></li>
+				<li><strong>Job Report</strong></li>
 			</ol>
 		</div>
 	</div>
@@ -65,12 +65,13 @@
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
+				<div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Report</h4>
+        </div>
         <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
           <div class="x_panel">
             <div id="content_result">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
