--- a/job/templates/job/create_job.html
+++ b/job/templates/job/create_job.html
@@ -30,7 +30,7 @@
 			    <div><input type="hidden" name="Estimate_id" id="Estimate_id" value="{{all_estimate.id}}" /></div>
 					<div class="form-group">
 						<label class="control-label col-sm-4" for="job_start_datetime">Start Time : </label>
-						<div class="input-group date form_datetime col-md-5" data-date="2017-03-15T05:25:07Z" data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
+						<div class="input-group date form_datetime col-md-5" data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
 							<input class="form-control" size="16" id="job_start_datetime" type="text" name="job_start_datetime" value="" readonly>
 							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
 						</div>
