--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -165,7 +165,7 @@
                   {% endfor %}
                   <li>
                     <div class="text-center">
-                      <a href="" style="color:#23527c;">
+                      <a href="{% url 'job:notifications' %}" style="color:#23527c;">
                         <strong>See All Alerts</strong>
                         <i class="fa fa-angle-right"></i>
                       </a>
