notification redirection,change password,service category,change in service model

--- a/job/templates/job/change_password.html
+++ b/job/templates/job/change_password.html
@@ -49,7 +49,7 @@
           $('.container').html(data);
           var a=$("#result").val();
           $('.container').html(ab);
-          if(a!='Your password has been Successfully changed')
+          if(a!='Your password has been Successfully changed.')
           {
             toastr.error(a, 'Error', {timeOut: 5000});
           }
