--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -79,6 +79,7 @@
                 <li><a href="{% url 'job:service' %}"><i class="fa fa-edit"></i> Services </a></li>
                 <li><a href="{% url 'job:job' %}"><i class="fa fa-edit"></i> Jobs </a></li>
                 <li><a href="{% url 'job:admin_job_report' %}"><i class="fa fa-edit"></i> Job Reports </a></li>
+                <li><a href="{% url 'job:categories' %}"><i class="fa fa-edit"></i> Categories </a></li>
                  <li><a href="{% url 'job:invoice' %}"><i class="fa fa-edit"></i> Invoice </a></li>
                 <li><a href="{% url 'job:queries' %}"><i class="fa fa-edit"></i> Response to Query</a></li>
                 <li><a href="{% url 'job:customer' %}"><i class="fa fa-edit"></i> Customer </a></li>
@@ -110,7 +111,10 @@
                     <a href="{% url 'job:profile'%}">  Profile</a>
                   </li>
                   <li>
-                    <a href={% url 'job:logout' %}><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                    <a href="{% url 'job:change_password'%}">Change Password</a>
+                  </li>
+                  <li>
+                    <a href="{% url 'job:logout' %}"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
                   </li>
                 </ul>
               </li>
